--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@
 
 
 VITE_API_PAGE_LIMIT= 5
-VITE_API_BASE_URL= "http://127.0.0.1:8000/api"
+VITE_API_BASE_URL= "https://forum-apis.onrender.com/api"
